Fix spacing in header

--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,8 @@
     padding-right:20%;
     padding-left:  20%;
     padding-top: 8px;
-    padding-bottom: 65px;
-    row-gap: 65px;
+    padding-bottom: 75px;
+    row-gap: 75px;
 }
 
 /* Head-top */
